# playing-with-blocks

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md
Source/: pdxinfo
Source/fonts/public-pixel/: PublicPixel-10pt.fnt  PublicPixel-11pt.fnt  PublicPixel-12pt.fnt  PublicPixel-14pt.fnt  PublicPixel-16pt.fnt  PublicPixel-18pt.fnt  PublicPixel-8pt.fnt  PublicPixel-9pt.fnt
Source/images/: game.xcf  playtris.xcf  title.xcf
src/: asset.c  asset.h  form.c  form.h  game.c  game.h  global.h  main.c  rand.c  rand.h  scene.h  text.c  text.h
src-assets/: card.xcf  game.xcf  title.xcf
src/scenes/: boardScene.c  boardScene.h  titleScene.c  titleScene.h
src/scenes/board/: assets.c  assets.h  boardScene.c  boardScene.h  matrix.c  matrix.h
src/scenes/options/: optionsScene.c  optionsScene.h
src/scenes/title/: titleScene.c
